--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         <div class="letter-box"></div>
       </div>
     </div>
-    <script src="./wordly.js"></script>
+    <script src="./wordle.js"></script>
   </body>
 </html>
