My quick version

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="header">
       <h1 class="game-title">Word Masters</h1>
+      <p class="loader">Loading...</p>
     </div>
     <div class="main-field">
       <div class="word-row">
