--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </div>
     <div class="main-field">
       <div class="word-row">
-        <div class="letter-box"></div>
-        <div class="letter-box"></div>
-        <div class="letter-box"></div>
-        <div class="letter-box"></div>
-        <div class="letter-box"></div>
+        <div class="letter-box first-word"></div>
+        <div class="letter-box first-word"></div>
+        <div class="letter-box first-word"></div>
+        <div class="letter-box first-word"></div>
+        <div class="letter-box first-word"></div>
       </div>
       <div class="word-row">
         <div class="letter-box"></div>
