--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="header">
       <h1 class="game-title">Word Masters</h1>
     </div>
+    <div class="info-bar">
+      <div class="spiral">🌀</div>
+    </div>
     <div class="main-field">
       <div class="word-row">
         <div class="letter-box first-word"></div>
